styles.css
/* ... */
.gradient-red {
  width: 100%;
  height: 100%;
  background: transparent url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/cover-gradient.png") no-repeat;
  background-size: 100% 200%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.gradient-red .logo {
  width: 100%;
  height: 30%;
  display: flex;
  justify-content: space-between;
}

.banner-heading p {
  color: white;
  font-size: 10px;
  font-weight: 100;
  margin: 10px 0 20px 10px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.items p {
  margin: 10px 0 10px 0;
  color: black;
  font-size: 15px;
  font-weight: 700;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.fund1 p {
  margin-left: 20px;
  font-size: 17px;
  margin-top: 10px;
  color: white;
  font-weight: 600;
}

.fund2 p {
  margin-left: 5em;
}

.fund6 p,
.fund7 p {
  color: grey;
  margin-left: 20px;
}

.fund4 p {
  margin-left: 10px;
  color: #555;
  font-size: 15px;
}

.gradient-background p {
  margin-left: 10px;
}

.gradient-list p {
  color: white;
  margin-left: -0.5px;
  font-size: 15px;
}

.gradient-list2 p {
  margin-top: 3px;
}

.disney p {
  margin-left: 1em;
}

.list p {
  color: grey;
  font-size: 15px;
  margin-right: 20px;
}

.footer2 p {
  color: whitesmoke;
}

.disney ul p {
  color: red;
}

.gradient-red .logo p {
  margin: 10px 10px 0 0;
  color: white;
}

.gradient-red .logo img {
  width: 50%;
  height: 100%;
  margin: 10px 0 0 10px;
}

.banner .banner-heading h3 {
  color: white;
  font-size: 50px;
  margin: 10px 0 0 10px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.foot1 .fab,
.foot1 .fas {
  font-size: 20px;
  margin-top: 0.7em;
  margin-left: 0.7em;
}

.banner-heading p .far,
.banner-heading p .fas {
  font-size: 15px;
  color: whitesmoke;
}

.banner-side {
  width: 35%;
  height: 100%;
}

.banner-side .upper-side {
  width: 100%;
  height: 49%;
  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/stay-fit-796x417.png");
  margin: 2px 2px 0 0;
  background-size: 100% 100%;
}

.side .banner-heading h3 {
  color: white;
  font-size: 25px;
  margin: 0 0 0 10px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.banner-side .lower-side {
  width: 100%;
  height: 49%;
  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/08/bitcoin_today-header_bitcoin_today-796x419.jpg");
  margin: 2px 2px 0 0;
  background-size: 100% 100%;
}

.section2 {
  width: 90%;
  display: flex;
  flex-direction: column;
  margin: 50px auto 0 auto;
}

h2 {
  color: #f42;
}

.section2 a {
  text-decoration: none;
}

.latestnews {
  display: flex;
  flex-wrap: wrap;
}

.items {
  width: 23%;
  margin: 8px 8px 8px 8px;
  height: 250px;
  display: flex;
  flex-direction: column;
}

.items .time span {
  color: gray;
  font-size: 13px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.gradient-background ul {
  list-style-type: none;
  margin-left: 10px;
}

.disney ul {
  width: 60%;
  margin-left: 0.5em;
  font-size: 15px;
  list-style-type: none;
  margin-top: 10px;
}

.section3 {
  width: 85%;
  display: flex;
  flex-direction: column;
  margin: 50px auto 0 auto;
}

.section3 .addlinks {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.gradient-list2 li {
  font-size: 12px;
  color: grey;
}

.section3 .addlinks ul {
  list-style: none;
  display: flex;
  margin-right: 10px;
}

.list li {
  margin-left: 20px;
  color: red;
  width: 100%;
  border-bottom: 1px solid lightgrey;
}

.section3 .addlinks ul li {
  margin: 10px;
  color: #f42;
  padding-right: 10px;
  border-right: 1px solid #f42;
}

.section3 .addlinks ul li:last-child {
  border-right: none;
}

.section3 a {
  text-decoration: none;
}

.latestfundings {
  display: flex;
}

.fundings {
  width: 24%;
  margin: 5px 5px 5px 5px;
  height: 300px;
  display: flex;
  flex-direction: column;
}

.fund1 {
  background-color: red;
  height: 40px;
  display: flex;
  text-align: center;
}

.pic1 {
  width: 60px;
  height: 60px;
  margin-left: 10px;
  margin-top: 10px;
}

.fund2 {
  height: 60px;
  background-color: rgb(248, 202, 210);
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.money {
  font-weight: 600;
  color: black;
}

.seed {
  color: grey;
  font-size: 12px;
  position: relative;
  left: 1.6em;
}

.fund3 {
  height: 90px;
  background-color: whitesmoke;
  line-height: 15px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  justify-content: center;
}

.fund6 {
  display: flex;
  margin-left: 20px;
  color: black;
}

.fund7 {
  display: flex;
  color: grey;
  margin-left: 20px;
}

.fund3 i {
  color: black;
}

.fund3 p:hover {
  color: black;
}

.fund4 {
  height: 90px;
  background-color: whitesmoke;
  border-top: 1px solid pink;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.fund4 small {
  color: lightgray;
}

.section4 {
  width: 85%;
  display: flex;
  margin: 50px auto 0 auto;
  flex-wrap: wrap;
}

.section4 #hiden {
  display: none;
}

.apps {
  display: flex;
}

.apps a {
  color: yellow;
  text-decoration: none;
}

.apps h2 {
  font-size: 30px;
}

.article-image {
  height: 800px;
}

.section4 article {
  width: 31%;
  height: 750px;
  margin: 7px 7px 7px 7px;
}

.gradient {
  height: 30%;
  margin-top: 20px;
  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/WHO-COvid-368x276.jpg");
  width: 100%;
  background-size: 100%;
  background-repeat: no-repeat;
}
/* ... */

